--- a/3362815204/localisation/GLP_gui_l_french.yml
+++ b/3362815204/localisation/GLP_gui_l_french.yml
@@ -48,11 +48,12 @@ glp_event_perso_MJ_loc: "§GEvent Perso MJ§!"
 glp_spawn_rebel_loc: "§RApparitions de rebelles§!" 
 glp_a2a_annex_loc: "Annexer la province (MJ2)" 
 glp_a1a_annex_loc: "Annexer la province (MJ1)"
-glp_empire_decision_loc: "Décision d'empire" 
+glp_empire_decision_loc: "Décision d'empire"
+glp_province_modifier_loc: "§YModificateur de prov§!"
 
 #Boutons vides prêts à être modifiés
 
-glp_remove_autonomy_loc: "Retirer l'Autonomie (Elizabeth)" #À supprimer
+
 glp_spawn_npc_advisor_loc: "Faire apparaître un Conseiller PNJ" #À supprimer
 glp_inquisition_events_loc: "Événements de l'Inquisition" #À supprimer
 glp_call_sejm_loc: "Convoquer le Sejm" #À supprimer
