--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -704,6 +704,8 @@
  glp_save_edit_events.EVTCAPACTIVEA59:0 "§RThe nation is becoming unnaturally unlucky§!"
  glp_save_edit_events.EVTCAPACTIVEA60:0 "§RRemove the luck modifier§!"
  glp_save_edit_events.EVTCAPACTIVEA61:0 "§GRemove the unluck modifier§!"
+ glp_save_edit_events.EVTCAPACTIVEA62:0 "Add modifier of dev -10% for 10 years"
+ glp_save_edit_events.EVTCAPACTIVEA63:0 "Add modifier of separatism -10y and -2 unrest for 10 years"
 
  glp_new_merc_company:0 "§YKnights of Round Table§! mercenary company is now available for 10 years to assist us in our military efforts!"
  glp_merc_company_expired:0 "§YKnights of Round Table§! Mercenary Company will be no longer available!"
@@ -897,6 +899,37 @@
  glp_save_edit_events.EMPIREA13:0 "Ravelian is now the offical faith in the empire"
  glp_save_edit_events.EMPIREA14:0 "The jaad is now the offical faith in the empire"
 
+ glp_save_edit_events.EVTDESC42:0 "Event to assign a province modifier"
+ glp_save_edit_events.EVTDESC42:0 "Choose whether you want to add or remove a modifier from the province of [From.GetName]"
+ glp_save_edit_events.PROVMODIFZZ1:0 "Never mind"
+ glp_save_edit_events.PROVMODIFA01:0 "§GAdd a province modifier§!"
+ glp_save_edit_events.PROVMODIFA02:0 "§RRemove a province modifier§!"
+ 
+ glp_save_edit_events.EVTNAME43:0 "Adding a modifier"
+ glp_save_edit_events.EVTDESC43:0 "Adding a modifier to the province of [From.GetName]"
+ glp_save_edit_events.PROVMODIFADDZZ1:0 "Never mind"
+ glp_save_edit_events.PROVMODIFADDA01:0 "Add settlers +20 settlers/year"
+ glp_save_edit_events.PROVMODIFADDA02:0 "Add production +5 production efficiency"
+ glp_save_edit_events.PROVMODIFADDA03:0 "Add production +10 production efficiency"
+ glp_save_edit_events.PROVMODIFADDA04:0 "Add the Ruby Market"
+ glp_save_edit_events.PROVMODIFADDA05:0 "Add the Ruby Apparatus"
+ glp_save_edit_events.PROVMODIFADDA06:0 "Add the NainBell Seat"
+ glp_save_edit_events.PROVMODIFADDA07:0 "Add the Armor of Corinn"
+ glp_save_edit_events.PROVMODIFADDA08:0 "Add the Serpent Tongue"
+ 
+ glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
+ glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
+ glp_save_edit_events.PROVMODIFREMOVEZZ1:0 "Never mind"
+ glp_save_edit_events.PROVMODIFREMOVEA01:0 "Remove settlers +20 settlers/year"
+ glp_save_edit_events.PROVMODIFREMOVEA02:0 "Remove production +5 production efficiency"
+ glp_save_edit_events.PROVMODIFREMOVEA03:0 "Remove production +10 production efficiency"
+ glp_save_edit_events.PROVMODIFREMOVEA04:0 "Remove the Ruby Market"
+ glp_save_edit_events.PROVMODIFREMOVEA05:0 "Remove the Ruby Apparatus"
+ glp_save_edit_events.PROVMODIFREMOVEA06:0 "Remove the NainBell Seat"
+ glp_save_edit_events.PROVMODIFREMOVEA07:0 "Remove the Armor of Corinn"
+ glp_save_edit_events.PROVMODIFREMOVEA08:0 "Remove the Serpent Tongue"
+
+
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
  glp_gm_events.EVTSEPCULATIONA01:0 "Let's join this lucrative business !"
@@ -905,10 +938,11 @@
  glp_gm_events.EVTNAME6:0 "The orcish slave aftermath"
  glp_gm_events.EVTDESC6:0 "After an intensive blobbing of Escann, the orcish abundance is no more ! We have speculated too much on the overabundance of the orcs. Now everyone is fighting for the last orcs available in the market like their life depends on it."
  glp_gm_events.EVTSEPCULATIONB01:0 "What a disaster"
+ glp_gm_events.EVTSEPCULATIONB02:0 "WE ARE RICH ! WE ARE RICH !!!"
 
  glp_gm_events.EVTNAME7:0 "The orcish slave aftermath"
  glp_gm_events.EVTDESC7:0 "After an intensive blobbing of Escann, the orcish abundance is no more ! We have made the choice of not relying on this horrible trade. Now we see other countries have a big issue with the over dependance on the orcish slavery."
- glp_gm_events.EVTSEPCULATIONB02:0 "We can laugh on them !"
+ glp_gm_events.EVTSEPCULATIONB03:0 "We can laugh on them !"
 
  glp_save_edit_events.EVTNAME71:0 "[From.GetName] Create Building"
  glp_save_edit_events.EVTDESC71:0 "Decide what kind of buildings you want in [From.GetName]"
@@ -1537,6 +1571,18 @@
  glp_2024_events.EVTOPTCR20:0 "Change to Fungi"
  glp_2024_events.EVTOPTCS20:0 "Change to Serpentbloom"
 
+ #Modifier in french beacause this is for personal game
+ ColonaddMJ:0 "Bonus colonisateurs"
+ ProductionaddMJ5:0 "Bonus production"
+ ProductionaddMJ10:0 "Bonus production II"
+ MarcheDuRubis:0 "Marché du Rubis"
+ ApparatDeRubis:0 "Appart de Rubis"
+ SiegePrixNainbell:0 "Siege du Prix NainBell"
+ Armuredecorinn:0 "Armure de Corinn"
+ LanguedeserpentMJ:0 "Langue de serpent"
+ glp_bonus_devcost:0 "Bonus DevCost"
+ glp_bonus_integration:0 "Bonus Intégration"
+ 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
  A1A_ideas:0 "MJ Ideas"
