--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -702,6 +702,9 @@
  glp_save_edit_events.EVTCAPACTIVEA59:0 "§RLa nation deviens annormalement malchanceuse§!"
  glp_save_edit_events.EVTCAPACTIVEA60:0 "§RRetire le modificateur de chance§!"
  glp_save_edit_events.EVTCAPACTIVEA61:0 "§GRetire le modificateur de malchance§!"
+ glp_save_edit_events.EVTCAPACTIVEA62:0 "Ajouter un modificateur de dev -10% pour 10 ans"
+ glp_save_edit_events.EVTCAPACTIVEA63:0 "Ajouter un modificateur de separatisme -10ans et -2 d'agitatio pour 10 ans"
+
 
  glp_new_merc_company:0 "§YLes Chevaliers de la Table Ronde§! sont désormais disponibles pour 10 ans afin de nous aider dans nos efforts militaires !"
  glp_merc_company_expired:0 "§YLes Chevaliers de la Table Ronde§! ne seront plus disponibles !"
@@ -844,16 +847,35 @@
  glp_save_edit_events.EMPIREA13:0 "Ravelian est maintenant la religion officielle de l'empire"
  glp_save_edit_events.EMPIREA14:0 "The jaad est maintenant la religion officielle de l'empire"
 
+ glp_save_edit_events.EVTDESC42:0 "Evenement pour attribuer un modificateur de province"
+ glp_save_edit_events.EVTDESC42:0 "Choissez si vous voulez ajouter ou retirer un modificateur à la province de [From.GetName]"
+ glp_save_edit_events.PROVMODIFZZ1:0 "Laissez tomber"
+ glp_save_edit_events.PROVMODIFA01:0 "§GAjouter un modificateur de province§!"
+ glp_save_edit_events.PROVMODIFA02:0 "§RRetirer un modificateur de province§!"
 
- EVTDESC5060UPGRADE:0 "Nos paysans ne sont plus superstitieux ! L'apparition d'une comète dans le ciel est considérée comme un bon présage, comme l'a prédit Vlad Draculea. Ils sont convaincus qu'à l'avenir, cela nous permettra de voyager parmi les étoiles et de coloniser la Lune, le Soleil et au-delà."
- glp_gm_events.EVTNAME3:0 "Autonomie supprimée !"
- glp_gm_events.EVTDESC3:0 "Sa Majesté, l'une des dirigeantes du Conclave Vampirique, Élisabeth Báthory, a visité [From.GetName] lors de ses voyages. En voyant Sa Majesté de près, les habitants de [From.GetName] se réjouissent désormais de faire partie de votre nation et du Conclave Vampirique !\nSans surprise, tous les bâtons du pays de [From.GetName] sont aiguisés et toutes les vierges du pays sont offertes à Élisabeth Báthory pour des tests de goût !\nPréparez le sang ! Massacrons ces vierges et remplissons la baignoire de leur sang !"
- glp_gm_events.EVTOPTA3:0 "Merci Élisabeth Báthory !!"
- glp_removed_autonomy_tt:0 "§YL'autonomie locale dans votre province a été supprimée !§!"
- glp_gm_events.EVTNAME4:0 "Institution apparue !"
- glp_gm_events.EVTDESC4:0 "Son Altesse, Vlad Draculea, a visité [From.Owner.GetName] lors de ses voyages pour partager les connaissances de l'institution !\nLes bâtons pointus sont soudainement à la mode cette saison ! L'ail, en revanche... Beaucoup moins."
- glp_gm_events.EVTOPTA4:0 "Merci Vlad Draculea !"
- glp_institution_spawned_tt:0 "§YUne institution est apparue dans l'une de vos provinces !§!"
+ glp_save_edit_events.EVTNAME43:0 "Ajout d'un modificateur"
+ glp_save_edit_events.EVTDESC43:0 "Ajout d'un modificateur sur la province de [From.GetName]"
+ glp_save_edit_events.PROVMODIFADDZZ1:0 "Laissez tomber"
+ glp_save_edit_events.PROVMODIFADDA01:0 "Ajout de colons +20 colons/an"
+ glp_save_edit_events.PROVMODIFADDA02:0 "Ajout de production +5 efficacité de production"
+ glp_save_edit_events.PROVMODIFADDA03:0 "Ajout de production +10 efficacité de production"
+ glp_save_edit_events.PROVMODIFADDA04:0 "Ajout du Marché du Rubis"
+ glp_save_edit_events.PROVMODIFADDA05:0 "Ajout de l'apparat de Rubis"
+ glp_save_edit_events.PROVMODIFADDA06:0 "Ajout du Siège du NainBell"
+ glp_save_edit_events.PROVMODIFADDA07:0 "Ajout de l'armure de Corinn"
+ glp_save_edit_events.PROVMODIFADDA08:0 "Ajout de la langue de serpent"
+
+ glp_save_edit_events.EVTNAME44:0 "Suppression d'un modificateur"
+ glp_save_edit_events.EVTDESC44:0 "Suppression d'un modificateur sur la province de [From.GetName]"
+ glp_save_edit_events.PROVMODIFREMOVEZZ1:0 "Laissez tomber"
+ glp_save_edit_events.PROVMODIFREMOVEA01:0 "Suppression de colons +20 colons/an"
+ glp_save_edit_events.PROVMODIFREMOVEA02:0 "Suppression de production +5 efficacité de production"
+ glp_save_edit_events.PROVMODIFREMOVEA03:0 "Suppression de production +10 efficacité de production"
+ glp_save_edit_events.PROVMODIFREMOVEA04:0 "Suppression du Marché du Rubis"
+ glp_save_edit_events.PROVMODIFREMOVEA05:0 "Suppression de l'apparat de Rubis"
+ glp_save_edit_events.PROVMODIFREMOVEA06:0 "Suppression du Siège du NainBell"
+ glp_save_edit_events.PROVMODIFREMOVEA07:0 "Suppression de l'armure de Corinn"
+ glp_save_edit_events.PROVMODIFREMOVEA08:0 "Suppression de la langue de serpent"
 
  glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
@@ -863,10 +885,11 @@
  glp_gm_events.EVTNAME6:0 "Les conséquences de l'esclavage orque"
  glp_gm_events.EVTDESC6:0 "Après une invasion massive de l'Escann, la surabondance d'orques n'est plus qu'un lointain souvenir ! Nous avons trop spéculé sur leur abondance. Maintenant, tout le monde se bat pour les derniers orques disponibles sur le marché, comme si leurs vie en dépendait."
  glp_gm_events.EVTSEPCULATIONB01:0 "Quelle catastrophe..."
+ glp_gm_events.EVTSEPCULATIONB02:0 "NOUS SOMMES RICHES! NOUS SOMMES RICHES !!!"
  
  glp_gm_events.EVTNAME7:0 "Les conséquences de l'esclavage orque"
  glp_gm_events.EVTDESC7:0 "Après une invasion massive de l'Escann, la surabondance d'orques n'est plus qu'un lointain souvenir ! Nous avons choisi de ne pas dépendre de ce commerce horrible. Maintenant, nous voyons d'autres pays confrontés à de graves problèmes en raison de leur dépendance excessive à l'esclavage orque."
- glp_gm_events.EVTSEPCULATIONB02:0 "Nous pouvons nous moquer d'eux !"
+ glp_gm_events.EVTSEPCULATIONB03:0 "Nous pouvons nous moquer d'eux !"
 
  glp_save_edit_events.EVTNAME71:0 "Créer un bâtiment dans [From.GetName]"
  glp_save_edit_events.EVTDESC71:0 "Décidez quel type de bâtiments vous voulez dans [From.GetName]."
@@ -1496,6 +1519,18 @@
  glp_2024_events.EVTOPTCR20:0 "Changer en Champignons"
  glp_2024_events.EVTOPTCS20:0 "Changer en Serpentbloom"
  
+ #Modificateur créé pour la game RP anbennar
+ ColonaddMJ:0 "Bonus colonisateurs"
+ ProductionaddMJ5:0 "Bonus production"
+ ProductionaddMJ10:0 "Bonus production II"
+ MarcheDuRubis:0 "Marché du Rubis"
+ ApparatDeRubis:0 "Appart de Rubis"
+ SiegePrixNainbell:0 "Siege du Prix NainBell"
+ Armuredecorinn:0 "Armure de Corinn"
+ LanguedeserpentMJ:0 "Langue de serpent"
+ glp_bonus_devcost:0 "Bonus DevCost"
+ glp_bonus_integration:0 "Bonus Intégration"
+
  A1A:0 "MJ"
  A2A:0 "CoMJ"
  A1A_ideas:0 "Idées MJ"
