--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -462,6 +462,8 @@
  glp_save_edit_events.EVTBUFFA38:0 "100 Terres de l'état"
  glp_save_edit_events.EVTBUFFA39:0 "-5 Terres de l'état"
  glp_save_edit_events.EVTBUFFA40:0 "-10 Terres de l'état"
+ glp_save_edit_events.EVTBUFFA41:0 "-1 d'innovation"
+ glp_save_edit_events.EVTBUFFA42:0 "1 d'innovation"
 
  glp_save_edit_events.EVTNAME17:0 "Faire apparaître des généraux pour [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC17:0 "Décidez quel type de généraux faire apparaître pour [From.Owner.GetName]."
@@ -543,6 +545,9 @@
  glp_save_edit_events.EVTFIXINGA21:0 "Retirer 10 d'autonomie dans [From.GetName]"
  glp_save_edit_events.EVTFIXINGA22:0 "Retirer 25 d'autonomie dans [From.GetName]"
  glp_save_edit_events.EVTFIXINGA23:0 "Retirer 100 d'autonomie dans [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA24:0 "-1 d'épuisement de guerre" 
+ glp_save_edit_events.EVTFIXINGA25:0 "-1 Inflation" 
+ glp_save_edit_events.EVTFIXINGA26:0 "-5 Inflation" 
 
  glp_save_edit_events.EVTFIXINGNUKE:0 "Raser cette satanée province"
  MJ_nuke_tt:0 "§RVous choisissez la violence pour punir un comportement insensé. Cette action réduira cette province en cendres.§!"
@@ -608,6 +613,16 @@
  glp_save_edit_events.EVTOPTF25:0 "1 000 Ducats"
  glp_save_edit_events.EVTOPTG25:0 "2 500 Ducats"
  glp_save_edit_events.EVTOPTH25:0 "5 000 Ducats"
+ glp_save_edit_events.EVTOPTI25:0 "Perd Un an de leurs revenus"
+ glp_save_edit_events.EVTOPTJ25:0 "Perd Dix ans de leurs revenus"
+ glp_save_edit_events.EVTOPTK25:0 "-100 Ducats"
+ glp_save_edit_events.EVTOPTL25:0 "-250 Ducats"
+ glp_save_edit_events.EVTOPTM25:0 "-500 Ducats"
+ glp_save_edit_events.EVTOPTN25:0 "-1000 Ducats"
+ glp_save_edit_events.EVTOPTO25:0 "-2500 Ducats"
+ glp_save_edit_events.EVTOPTP25:0 "-5000 Ducats" 
+ glp_save_edit_events.EVTOPTQ25:0 "Gain one year of trade income"
+
  glp_save_edit_events.EVTNAME27:0 "Libérer tous les pays de [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC27:0 "Souhaitez-vous libérer tous les pays possibles de [From.Owner.GetName] ?"
  glp_save_edit_events.EVTOPTA27:0 "Non"
@@ -864,6 +879,10 @@
  glp_save_edit_events.PROVMODIFADDA06:0 "Ajout du Siège du NainBell"
  glp_save_edit_events.PROVMODIFADDA07:0 "Ajout de l'armure de Corinn"
  glp_save_edit_events.PROVMODIFADDA08:0 "Ajout de la langue de serpent"
+ glp_save_edit_events.PROVMODIFADDA09:0 "Ajout efficacité commercial"
+ glp_save_edit_events.PROVMODIFADDA010:0 "Ajout d'un colon"
+ glp_save_edit_events.PROVMODIFADDA011:0 "Ajout "
+ glp_save_edit_events.PROVMODIFADDA012:0 "Ajout "
 
  glp_save_edit_events.EVTNAME44:0 "Suppression d'un modificateur"
  glp_save_edit_events.EVTDESC44:0 "Suppression d'un modificateur sur la province de [From.GetName]"
@@ -876,6 +895,10 @@
  glp_save_edit_events.PROVMODIFREMOVEA06:0 "Suppression du Siège du NainBell"
  glp_save_edit_events.PROVMODIFREMOVEA07:0 "Suppression de l'armure de Corinn"
  glp_save_edit_events.PROVMODIFREMOVEA08:0 "Suppression de la langue de serpent"
+ glp_save_edit_events.PROVMODIFREMOVEA09:0 "Suppression de l'efficacité commercial"
+ glp_save_edit_events.PROVMODIFREMOVEA010:0 "Suppression d'un colon"
+ glp_save_edit_events.PROVMODIFREMOVEA011:0 "Suppression "
+ glp_save_edit_events.PROVMODIFREMOVEA012:0 "Suppression "
 
  glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
@@ -1530,6 +1553,11 @@
  LanguedeserpentMJ:0 "Langue de serpent"
  glp_bonus_devcost:0 "Bonus DevCost"
  glp_bonus_integration:0 "Bonus Intégration"
+ glp_bonus_commercial_efficiency:0 "Bonus Efficacité commercial"
+ glp_bonus_more_colonist:0 "Bonus Colon"  
+ glp_chess_winner:0 "Vainqueur du tournois d'echec"
+ glp_chess_host:0 "Siège du tournois d'echec"
+ glp_reelection_cost:0 "Coût de reélection réduit"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
