--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -464,6 +464,8 @@
  glp_save_edit_events.EVTBUFFA38:0 "100 Crown land"
  glp_save_edit_events.EVTBUFFA39:0 "-5 Crown land"
  glp_save_edit_events.EVTBUFFA40:0 "-10 Crown land"
+ glp_save_edit_events.EVTBUFFA41:0 "-1 Innovativeness"
+ glp_save_edit_events.EVTBUFFA42:0 "1 Innovativeness"
  
  glp_save_edit_events.EVTNAME17:0 "Spawn Generals for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC17:0 "Decide what kind of generals to spawn for [From.Owner.GetName]."
@@ -545,6 +547,9 @@
  glp_save_edit_events.EVTFIXINGA21:0 "Remove 10 Autonomy in [From.GetName]"
  glp_save_edit_events.EVTFIXINGA22:0 "Remove 25 Autonomy in [From.GetName]"
  glp_save_edit_events.EVTFIXINGA23:0 "Remove 100 Autonomy in [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA24:0 "-1 War Exhaustion" 
+ glp_save_edit_events.EVTFIXINGA25:0 "-1 Inflation" 
+ glp_save_edit_events.EVTFIXINGA26:0 "-5 Inflation" 
 
  glp_save_edit_events.EVTFIXINGNUKE:0 "Nuke this f*cking province"
  MJ_nuke_tt:0 "§RYou choose violence to punish foolish behavior. This action will raze to the ground this province.§!"
@@ -610,6 +615,16 @@
  glp_save_edit_events.EVTOPTF25:0 "1000 Ducats"
  glp_save_edit_events.EVTOPTG25:0 "2500 Ducats"
  glp_save_edit_events.EVTOPTH25:0 "5000 Ducats"
+ glp_save_edit_events.EVTOPTI25:0 "Lose One year of their income"
+ glp_save_edit_events.EVTOPTJ25:0 "Lose Ten year of their income"
+ glp_save_edit_events.EVTOPTK25:0 "-100 Ducats"
+ glp_save_edit_events.EVTOPTL25:0 "-250 Ducats"
+ glp_save_edit_events.EVTOPTM25:0 "-500 Ducats"
+ glp_save_edit_events.EVTOPTN25:0 "-1000 Ducats"
+ glp_save_edit_events.EVTOPTO25:0 "-2500 Ducats"
+ glp_save_edit_events.EVTOPTP25:0 "-5000 Ducats" 
+ glp_save_edit_events.EVTOPTQ25:0 "Gain one year of trade income"
+
  glp_save_edit_events.EVTNAME27:0 "Release all countries From [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC27:0 "Do you want to release all possible countries From [From.Owner.GetName]?"
  glp_save_edit_events.EVTOPTA27:0 "No"
@@ -916,7 +931,13 @@
  glp_save_edit_events.PROVMODIFADDA06:0 "Add the NainBell Seat"
  glp_save_edit_events.PROVMODIFADDA07:0 "Add the Armor of Corinn"
  glp_save_edit_events.PROVMODIFADDA08:0 "Add the Serpent Tongue"
- 
+ glp_save_edit_events.PROVMODIFADDA09:0 "Add Trade efficiency"
+ glp_save_edit_events.PROVMODIFADDA010:0 "Add one Colonist"
+ glp_save_edit_events.PROVMODIFADDA011:0 "Set bankruptcy"
+ glp_save_edit_events.PROVMODIFADDA012:0 "Add chess winner"
+ glp_save_edit_events.PROVMODIFADDA013:0 "Add chess host" 
+ glp_save_edit_events.PROVMODIFADDA014:0 "Add less reelection cost" 
+
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
  glp_save_edit_events.PROVMODIFREMOVEZZ1:0 "Never mind"
@@ -928,7 +949,12 @@
  glp_save_edit_events.PROVMODIFREMOVEA06:0 "Remove the NainBell Seat"
  glp_save_edit_events.PROVMODIFREMOVEA07:0 "Remove the Armor of Corinn"
  glp_save_edit_events.PROVMODIFREMOVEA08:0 "Remove the Serpent Tongue"
-
+ glp_save_edit_events.PROVMODIFREMOVEA09:0 "Remove Trade efficiency"
+ glp_save_edit_events.PROVMODIFREMOVEA010:0 "Remove one Colonist"
+ glp_save_edit_events.PROVMODIFREMOVEA011:0 "Remove bankruptcy"
+ glp_save_edit_events.PROVMODIFREMOVEA012:0 "Remove chess winner"
+ glp_save_edit_events.PROVMODIFREMOVEA013:0 "Remove chess host"
+ glp_save_edit_events.PROVMODIFREMOVEA014:0 "Remove less reelection cost"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
@@ -1582,7 +1608,13 @@
  LanguedeserpentMJ:0 "Langue de serpent"
  glp_bonus_devcost:0 "Bonus DevCost"
  glp_bonus_integration:0 "Bonus Intégration"
- 
+ glp_bonus_commercial_efficiency:0 "Bonus Efficacité commercial"
+ glp_bonus_more_colonist:0 "Bonus Colon" 
+ glp_chess_winner:0 "Vainqueur du tournois d'echec"
+ glp_chess_host:0 "Siège du tournois d'echec"
+ glp_reelection_cost:0 "Coût de reélection réduit"
+
+
  A1A:0 "MJ"
  A2A:0 "CoMJ"
  A1A_ideas:0 "MJ Ideas"
