commit correction trad fr, ajout remove contre bankruptcy

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -951,10 +951,11 @@
  glp_save_edit_events.PROVMODIFREMOVEA08:0 "Remove the Serpent Tongue"
  glp_save_edit_events.PROVMODIFREMOVEA09:0 "Remove Trade efficiency"
  glp_save_edit_events.PROVMODIFREMOVEA010:0 "Remove one Colonist"
- glp_save_edit_events.PROVMODIFREMOVEA011:0 "Remove bankruptcy"
+ glp_save_edit_events.PROVMODIFREMOVEA011:0 "Add counter bankruptcy"
  glp_save_edit_events.PROVMODIFREMOVEA012:0 "Remove chess winner"
  glp_save_edit_events.PROVMODIFREMOVEA013:0 "Remove chess host"
  glp_save_edit_events.PROVMODIFREMOVEA014:0 "Remove less reelection cost"
+ glp_save_edit_events.PROVMODIFREMOVEA015:0 "Remove counter bankruptcy"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
