--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -881,8 +881,10 @@
  glp_save_edit_events.PROVMODIFADDA08:0 "Ajout de la langue de serpent"
  glp_save_edit_events.PROVMODIFADDA09:0 "Ajout efficacité commercial"
  glp_save_edit_events.PROVMODIFADDA010:0 "Ajout d'un colon"
- glp_save_edit_events.PROVMODIFADDA011:0 "Ajout "
- glp_save_edit_events.PROVMODIFADDA012:0 "Ajout "
+ glp_save_edit_events.PROVMODIFADDA011:0 "Mettre en bankruptcy"
+ glp_save_edit_events.PROVMODIFADDA012:0 "Ajout gagnant échec"
+ glp_save_edit_events.PROVMODIFADDA013:0 "Ajout hote du tournois d'échec"
+ glp_save_edit_events.PROVMODIFADDA014:0 "Ajout moins de cout de reelection"
 
  glp_save_edit_events.EVTNAME44:0 "Suppression d'un modificateur"
  glp_save_edit_events.EVTDESC44:0 "Suppression d'un modificateur sur la province de [From.GetName]"
@@ -897,8 +899,11 @@
  glp_save_edit_events.PROVMODIFREMOVEA08:0 "Suppression de la langue de serpent"
  glp_save_edit_events.PROVMODIFREMOVEA09:0 "Suppression de l'efficacité commercial"
  glp_save_edit_events.PROVMODIFREMOVEA010:0 "Suppression d'un colon"
- glp_save_edit_events.PROVMODIFREMOVEA011:0 "Suppression "
- glp_save_edit_events.PROVMODIFREMOVEA012:0 "Suppression "
+ glp_save_edit_events.PROVMODIFREMOVEA011:0 "Ajout contre bankruptcy "
+ glp_save_edit_events.PROVMODIFREMOVEA012:0 "Suppression gagnant échec"
+ glp_save_edit_events.PROVMODIFREMOVEA013:0 "Suppression hote du tournois d'échec"
+ glp_save_edit_events.PROVMODIFREMOVEA014:0 "Suppression moins de cout de reelection"
+ glp_save_edit_events.PROVMODIFREMOVEA015:0 "Suppression contre bankruptcy"
 
  glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
