New glp descision

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -322,6 +322,7 @@
  glp_save_edit_events.EVTLEADERA05:0 "Diplomatic Tuition +0/+1/+0"
  glp_save_edit_events.EVTLEADERA06:0 "Military Tuition +0/+0/+1"
  glp_save_edit_events.EVTLEADERA07:0 "Get Stupidier -1/-1/-1"
+ glp_save_edit_events.EVTLEADERA08:0 "Assassinate Consort"
  # glp_save_edit_events.EVTOPTH9:0 "Grzegorz Brzeczyszczykiewicz Ruler"
  # glp_save_edit_events.EVTOPTI9:0 "Jan Pawel II"
  # glp_save_edit_events.EVTOPTJ9:0 "Arthur Pendragon"
@@ -895,6 +896,10 @@
  glp_save_edit_events.MAGICALA24:0 "Give them a large amount of magical infamy"
  glp_save_edit_events.MAGICALA25:0 "Give them a Massive amount of magical infamy"
  glp_save_edit_events.MAGICALA26:0 "Reset magical infamy"
+ glp_save_edit_events.MAGICALA27:0 "Set ruler powerful mage"
+ glp_save_edit_events.MAGICALA28:0 "Remove ruler powerful mage"
+ glp_save_edit_events.MAGICALA29:0 "Set Hier powerful mage"
+ glp_save_edit_events.MAGICALA30:0 "Remove Hier powerful mage"
   
  glp_save_edit_events.EVTNAME41:0 "Empire event for country [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC41:0 "Choose what event you want to trigger for the country [From.Owner.GetName]"
@@ -937,6 +942,12 @@
  glp_save_edit_events.PROVMODIFADDA012:0 "Add chess winner"
  glp_save_edit_events.PROVMODIFADDA013:0 "Add chess host" 
  glp_save_edit_events.PROVMODIFADDA014:0 "Add less reelection cost" 
+ glp_save_edit_events.PROVMODIFADDA015:0 "Add more monarch lifespan"
+ glp_save_edit_events.PROVMODIFADDA016:0 "Add minor provincial mp"
+ glp_save_edit_events.PROVMODIFADDA017:0 "Add minor provincial goodproduced"
+ glp_save_edit_events.PROVMODIFADDA018:0 "Add minor naval FL"
+ glp_save_edit_events.PROVMODIFADDA019:0 "Add debuff less tolerance of other"
+
 
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -956,6 +967,11 @@
  glp_save_edit_events.PROVMODIFREMOVEA013:0 "Remove chess host"
  glp_save_edit_events.PROVMODIFREMOVEA014:0 "Remove less reelection cost"
  glp_save_edit_events.PROVMODIFREMOVEA015:0 "Remove counter bankruptcy"
+ glp_save_edit_events.PROVMODIFREMOVEA016:0 "Remove more monarch lifespan"
+ glp_save_edit_events.PROVMODIFREMOVEA017:0 "Remove minor provincial mp"
+ glp_save_edit_events.PROVMODIFREMOVEA018:0 "Remove minor provincial goodproduced"
+ glp_save_edit_events.PROVMODIFREMOVEA019:0 "Remove minor naval FL"
+ glp_save_edit_events.PROVMODIFREMOVEA020:0 "Remove debuff less tolerance of other"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
@@ -1610,10 +1626,16 @@
  glp_bonus_devcost:0 "Bonus DevCost"
  glp_bonus_integration:0 "Bonus Intégration"
  glp_bonus_commercial_efficiency:0 "Bonus Efficacité commercial"
- glp_bonus_more_colonist:0 "Bonus Colon" 
+ glp_malus_colonist:0 "Malus Colon" 
  glp_chess_winner:0 "Vainqueur du tournois d'echec"
  glp_chess_host:0 "Siège du tournois d'echec"
  glp_reelection_cost:0 "Coût de reélection réduit"
+ glp_counter_bankruptcy:0 "Modificateur de contre bankruptcy"
+ glp_bonus_more_lifespan:0 "Ingiène de vie irreprochable" 
+ glp_bonus_minor_provincial_mp:0 "Bonus mineur de mp"
+ glp_bonus_minor_provincial_good_produced:0 "Bonus mineur de good produced"
+ glp_bonus_minor_provincial_naval_fl:0 "Bonus mineur de FL naval"
+ glp_bad_tolerance_of_other:0 "hérétique et païen au buché"
 
 
  A1A:0 "MJ"
