--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -320,6 +320,7 @@
  glp_save_edit_events.EVTLEADERA05:0 "Tutorat diplomatique +0/+1/+0"
  glp_save_edit_events.EVTLEADERA06:0 "Tutorat militaire +0/+0/+1"
  glp_save_edit_events.EVTLEADERA07:0 "Devenir plus stupide -1/-1/-1"
+ glp_save_edit_events.EVTLEADERA08:0 "Assassiner la Consort"
  # glp_save_edit_events.EVTOPTH9:0 "Dirigeant Grzegorz Brzeczyszczykiewicz"
  # glp_save_edit_events.EVTOPTI9:0 "Jan Pawel II"
  # glp_save_edit_events.EVTOPTJ9:0 "Arthur Pendragon"
@@ -843,6 +844,12 @@
  glp_save_edit_events.MAGICALA24:0 "Leur donner une grande quantité d'infamie magique"
  glp_save_edit_events.MAGICALA25:0 "Leur donner une quantité massive d'infamie magique"
  glp_save_edit_events.MAGICALA26:0 "Réinitialiser l'infamie magique"
+ glp_save_edit_events.MAGICALA26:0 "Reset magical infamy"
+ glp_save_edit_events.MAGICALA27:0 "Ajouter de la personnalité mage puissant au dirigeant"
+ glp_save_edit_events.MAGICALA28:0 "Enleve la personnalité mage puissant au dirigeant"
+ glp_save_edit_events.MAGICALA29:0 "Ajouter de la personnalité mage puissant à l'héritier"
+ glp_save_edit_events.MAGICALA30:0 "Enleve la personnalité mage puissant à l'héritier"
+
  
  glp_save_edit_events.EVTNAME41:0 "Evenement d'empire pour le pays [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC41:0 "Choissiez quel type d'événement d'empire vous souhaitez déclencher pour le pays [From.owner.GetName]."
@@ -885,6 +892,12 @@
  glp_save_edit_events.PROVMODIFADDA012:0 "Ajout gagnant échec"
  glp_save_edit_events.PROVMODIFADDA013:0 "Ajout hote du tournois d'échec"
  glp_save_edit_events.PROVMODIFADDA014:0 "Ajout moins de cout de reelection"
+ glp_save_edit_events.PROVMODIFADDA015:0 "Ajout de plus de longeur de vie du dirigeant"
+ glp_save_edit_events.PROVMODIFADDA016:0 "Ajout mineur de mp provincial"
+ glp_save_edit_events.PROVMODIFADDA017:0 "Ajout mineur de production de bien provincial"
+ glp_save_edit_events.PROVMODIFADDA018:0 "Ajout mineur de FL naval"
+ glp_save_edit_events.PROVMODIFADDA019:0 "Ajout de moins de tolerance des autres"
+
 
  glp_save_edit_events.EVTNAME44:0 "Suppression d'un modificateur"
  glp_save_edit_events.EVTDESC44:0 "Suppression d'un modificateur sur la province de [From.GetName]"
@@ -904,6 +917,11 @@
  glp_save_edit_events.PROVMODIFREMOVEA013:0 "Suppression hote du tournois d'échec"
  glp_save_edit_events.PROVMODIFREMOVEA014:0 "Suppression moins de cout de reelection"
  glp_save_edit_events.PROVMODIFREMOVEA015:0 "Suppression contre bankruptcy"
+ glp_save_edit_events.PROVMODIFREMOVEA016:0 "Suppression de plus de longeur de vie du dirigeant"
+ glp_save_edit_events.PROVMODIFREMOVEA017:0 "Suppression mineur de mp provincial"
+ glp_save_edit_events.PROVMODIFREMOVEA018:0 "Suppression mineur de production de bien provincial"
+ glp_save_edit_events.PROVMODIFREMOVEA019:0 "Suppression mineur de FL naval"
+ glp_save_edit_events.PROVMODIFREMOVEA020:0 "Suppression de moins de tolerance des autres"
 
  glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
@@ -1559,10 +1577,16 @@
  glp_bonus_devcost:0 "Bonus DevCost"
  glp_bonus_integration:0 "Bonus Intégration"
  glp_bonus_commercial_efficiency:0 "Bonus Efficacité commercial"
- glp_bonus_more_colonist:0 "Bonus Colon"  
+ glp_malus_colonist:0 "Malus Colon"  
  glp_chess_winner:0 "Vainqueur du tournois d'echec"
  glp_chess_host:0 "Siège du tournois d'echec"
  glp_reelection_cost:0 "Coût de reélection réduit"
+ glp_counter_bankruptcy:0 "Modificateur de contre bankruptcy"
+ glp_bonus_more_lifespan:0 "Ingiène de vie irreprochable" 
+ glp_bonus_minor_provincial_mp:0 "Bonus mineur de mp"
+ glp_bonus_minor_provincial_good_produced:0 "Bonus mineur de good produced"
+ glp_bonus_minor_provincial_naval_fl:0 "Bonus mineur de FL naval"
+ glp_bad_tolerance_of_other:0 "hérétique et païen au buché"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
