--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -293,6 +293,7 @@
  glp_save_edit_events.EVTMILITARYA12:0 "Spawn 30 Artillery"
  glp_save_edit_events.EVTMILITARYA13:0 "Spawn 40 Artillery"
  glp_save_edit_events.EVTMILITARYA14:0 "Spawn 5 Artificer Regiment"
+ glp_save_edit_events.EVTMILITARYA15:0 "Delete all troops"
  glp_save_edit_events.EVTNAME6:0 "Received Troop Support"
  glp_save_edit_events.EVTDESC6:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - Infernal Troll Game Masters, has granted our [ROOT.GovernmentName] fresh troops in [From.GetName]. This will help us achieve peace sooner!"
  glp_save_edit_events.EVTOPTA6:0 "Excellent!"
@@ -947,6 +948,7 @@
  glp_save_edit_events.PROVMODIFADDA017:0 "Add minor provincial goodproduced"
  glp_save_edit_events.PROVMODIFADDA018:0 "Add minor naval FL"
  glp_save_edit_events.PROVMODIFADDA019:0 "Add debuff less tolerance of other"
+ glp_save_edit_events.PROVMODIFADDA020:0 "Bro is doomed"
 
 
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
@@ -972,6 +974,7 @@
  glp_save_edit_events.PROVMODIFREMOVEA018:0 "Remove minor provincial goodproduced"
  glp_save_edit_events.PROVMODIFREMOVEA019:0 "Remove minor naval FL"
  glp_save_edit_events.PROVMODIFREMOVEA020:0 "Remove debuff less tolerance of other"
+ glp_save_edit_events.PROVMODIFREMOVEA021:0 "Remove u r doomed bro"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
@@ -1636,7 +1639,7 @@
  glp_bonus_minor_provincial_good_produced:0 "Bonus mineur de good produced"
  glp_bonus_minor_provincial_naval_fl:0 "Bonus mineur de FL naval"
  glp_bad_tolerance_of_other:0 "hérétique et païen au buché"
-
+ glp_doomed:0 "u r doomed Bro!"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
