--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -899,6 +899,7 @@
  glp_save_edit_events.PROVMODIFADDA018:0 "Ajout mineur de FL naval"
  glp_save_edit_events.PROVMODIFADDA019:0 "Ajout de moins de tolerance des autres"
  glp_save_edit_events.PROVMODIFADDA020:0 "Bro is doomed!"
+ glp_save_edit_events.PROVMODIFADDA022:0 "ajout de 5 unrest sur la province"
 
  glp_save_edit_events.EVTNAME44:0 "Suppression d'un modificateur"
  glp_save_edit_events.EVTDESC44:0 "Suppression d'un modificateur sur la province de [From.GetName]"
@@ -923,7 +924,8 @@
  glp_save_edit_events.PROVMODIFREMOVEA018:0 "Suppression mineur de production de bien provincial"
  glp_save_edit_events.PROVMODIFREMOVEA019:0 "Suppression mineur de FL naval"
  glp_save_edit_events.PROVMODIFREMOVEA020:0 "Suppression de moins de tolerance des autres"
- glp_save_edit_events.PROVMODIFREMOVEA021:0 "Suppression de u r doomed Bro!" 
+ glp_save_edit_events.PROVMODIFREMOVEA021:0 "Suppression de u r doomed Bro!"
+ glp_save_edit_events.PROVMODIFREMOVEA021:0 "Suppression de 5 unrest sur la province"
 
  glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
@@ -1590,6 +1592,7 @@
  glp_bonus_minor_provincial_naval_fl:0 "Bonus mineur de FL naval"
  glp_bad_tolerance_of_other:0 "hérétique et païen au buché"
  glp_doomed:0 "u r doomed Bro!"
+ glp_malus_unrest_5:0 "Peuple révolté"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
